solve problem with z-index and add some margin

--- a/src/assets/css/monopoly.css
+++ b/src/assets/css/monopoly.css
@@ -27,6 +27,7 @@ main{
     justify-content: center;
     align-items: center;
     min-height: 70vh;
+    z-index: 2;
 }
 
 aside#other-players{
@@ -48,6 +49,7 @@ article#main-tile-deed{
     width: 50%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 8rem;
 }
 
 article#main-tile-deed div:first-of-type{
